# lightarchitects-sdk

./: .env.example  .gitignore  .gitlab-ci.yml  .hermes-mcp-config.yaml.example  AGENTRUNNER_VIBE_CODING_GAP_ANALYSIS.md  BUILD-MANIFESTO.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN-LANGUAGE.md  DESIGN-REFINEMENTS.md  LICENSE  Makefile  NOTICE  OPERATOR-HANDOFF.md  QUICK_START.md  README.md  SECURITY.md  UI-WORKFLOW.md  WEBSHELL-UX-AUDIT.md  clippy.toml  deny.toml  manifest.yaml
l-arc/: Cargo.toml  README.md
l-arc-auth/: Cargo.toml
l-arc-auth/src/: auth_guard.rs  cli.rs  config.rs  error.rs  key_reader.rs  key_validator.rs  lib.rs  login.rs  revocation.rs
l-arc-cli/: Cargo.toml
l-arc-cli/src/: config.rs  main.rs
l-arc-core/: Cargo.toml  README.md
l-arc-core/src/: client.rs  config.rs  constants.rs  error.rs  jsonrpc.rs  lib.rs  transport.rs
l-arc-core/tests/: adversarial.rs  integration.rs
l-arc-corso/: Cargo.toml  README.md
l-arc-corso/src/: client.rs  content.rs  lib.rs
l-arc-corso/tests/: integration.rs
l-arc-eva/: Cargo.toml  README.md
l-arc-eva/src/: client.rs  content.rs  lib.rs
l-arc-eva/tests/: integration.rs
l-arc-quantum/: Cargo.toml  README.md
l-arc-quantum/src/: client.rs  content.rs  lib.rs
l-arc-quantum/tests/: integration.rs
l-arc-seraph/: Cargo.toml  README.md
l-arc-seraph/src/: client.rs  content.rs  lib.rs
l-arc-seraph/tests/: integration.rs
l-arc-soul/: Cargo.toml  README.md
l-arc-soul/src/: client.rs  helix.rs  lib.rs  query.rs
l-arc-soul/tests/: integration.rs
l-arc/src/: lib.rs
la-crypto/: Cargo.toml  Makefile
la-crypto/benches/: crypto.rs
la-crypto/src/: compare.rs  derive.rs  encrypt.rs  hash.rs  lib.rs  random.rs  secrets.rs  sign.rs  verses.rs
la-crypto/tests/: integration.rs  proptest.rs
lightarchitects/: Cargo.toml  README.md
lightarchitects-arch/: Cargo.toml
lightarchitects-arch/benches/: emitter.rs  extractor.rs  verifier.rs
lightarchitects-arch/docs/: L0-context.md  L1-container.md  L2-component.md  RUNBOOK.md
lightarchitects-arch/src/: lib.rs  model.rs
lightarchitects-arch/tests/: bootstrap_convergence.rs  extractor_property.rs  regression.rs
lightarchitects-arena/: Cargo.toml  example-config.yaml
lightarchitects-arena/src/: ayin_exporter.rs  discovery.rs  exercises.rs  export.rs  lib.rs  main.rs  prompts.rs  scoring.rs
lightarchitects-arena/training/: dpo_train.py  requirements.txt  reward_shaping.py  rl_train.py
lightarchitects-auth/: Cargo.toml
lightarchitects-auth/src/: auth_guard.rs  cli.rs  config.rs  key_reader.rs  key_validator.rs  login.rs
lightarchitects-auth/tests/: key_reader_tests.rs  key_validator_tests.rs  revocation_tests.rs
lightarchitects-ayin/: Cargo.toml  README.md
lightarchitects-ayin/src/: actions.rs  client.rs  conversation.rs  lib.rs
lightarchitects-ayin/tests/: integration.rs
lightarchitects-cli/: Cargo.toml
lightarchitects-cli/src/: config.rs  main.rs  output.rs
lightarchitects-core/: Cargo.toml  README.md
lightarchitects-core/src/: action.rs  auth.rs  config.rs  error.rs  handler.rs  jsonrpc.rs  lib.rs  paths.rs  server.rs  sibling.rs  transport.rs
lightarchitects-core/tests/: adversarial.rs  integration.rs
lightarchitects-eva/: Cargo.toml  README.md
lightarchitects-eva/src/: client.rs  content.rs  ideate.rs  lib.rs  types.rs
lightarchitects-eva/tests/: integration.rs
lightarchitects-gateway/: CLAUDE.md  CYPHER-AUDIT.md  Cargo.toml  LICENSE  QA_AGENT_STREAM.md  README.md  SECURITY.md  build.rs
lightarchitects-gateway/.cargo/: ci-denylist.sh
lightarchitects-gateway/.gate-evals/: helix-cache-retrieval-merge.yaml  phase-6-skills-as-tools-phase.yaml  phase-7-merge.yaml  phase-7-validation-phase.yaml
lightarchitects-gateway/benches/: wave32_perf.rs
lightarchitects-gateway/src/: config.rs  conversational.rs  enrichment.rs  error.rs  governance.rs  lib.rs  lightsquad_task.rs  llm.rs  main.rs  rubric.rs  server.rs  span_context.rs  spawner.rs  squad_comms.rs  version.rs
lightarchitects-gateway/tests/: CAPABILITY_MATRIX.md  admin_agents_upload_test.rs  agentic_criteria_test.rs  api_version_test.rs  assertion_events_schema.rs  container_hitl_audit_e2e.rs  e2e.rs  exec_comms_integration.rs  g8_validation.rs  gateway_ayin_contract.rs  gateway_burst_load.rs  gateway_span_chain.rs  git_comms_integration.rs  governance_hooks.rs  handler_dispatch_contract.rs  helix_retrieve_test.rs  ironclaw-7-day.rs  live_headed_tests.rs  llm_agent_trait_contract.rs  operator_flow.rs  platform_agents_read_test.rs  property_exec_argv_safety.rs  property_git_safety.proptest-regressions  property_git_safety.rs  property_sanitize_params.proptest-regressions  property_sanitize_params.rs  property_skill_trust.proptest-regressions  property_skill_trust.rs  regression_phase6.rs  skills_as_tools_integration.rs  skills_gateway_e2e.rs  smoke.rs  span_atomic_write.rs  span_context_spawn_safety.rs  test_g1_sanitization_control.rs  test_g5_baseline_capture.rs  test_llm_evals_e2e.rs  ui_wire_test.rs  vault_cli_tests.rs  vibe_coding_e2e.rs
lightarchitects-helix/: Cargo.toml
lightarchitects-helix/src/: cache.rs  canon.rs  client.rs  db.rs  lib.rs  migrations.rs  query.rs  sqlite_backend.rs  storage.rs  store.rs  training.rs
lightarchitects-helix/tests/: helix_store_integration.rs
lightarchitects-lightspace/: Cargo.toml
lightarchitects-lightspace/src/: error.rs  lib.rs  security.rs  snapshot.rs  types.rs
lightarchitects-lightspace/tests/: reducer_property.proptest-regressions  reducer_property.rs  reducer_round_trip.rs
lightarchitects-oracle/: Cargo.toml
lightarchitects-oracle/src/: client.rs  lib.rs  models.rs  verdict.rs
lightarchitects-oracle/tests/: models_tests.rs  verdict_tests.rs
lightarchitects-seraph/: Cargo.toml  README.md
lightarchitects-server/: Cargo.toml
lightarchitects-soul/: Cargo.toml  README.md
lightarchitects-turnlog/: Cargo.toml
lightarchitects-webshell/: CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  scope.toml
lightarchitects-webshell-mcp-host/: Cargo.toml  README.md
(+2418 files in other folders)
