[workspace]
resolver = "2"
members = [
    "lightarchitects-crypto",
    "lightarchitects-core",
    "lightarchitects-auth",      # Auth — API key validation, 3-tier degradation
    "lightarchitects-gateway",   # Phase 6: MCP Gateway binary (Tasks 6.1, 6.4)
    # Added as crates are built in subsequent phases:
    "lightarchitects-soul",      # Phase 4
    "lightarchitects-corso",     # Phase 5
    "lightarchitects-arena",     # keen-forging-hydra: MCP training arena
    "lightarchitects-oracle",    # Multi-model mathematical verification oracle
    "lightarchitects-eva",       # Phase 6
    "lightarchitects-quantum",   # Phase 7
    "lightarchitects-seraph",   # Phase 8
    "lightarchitects-ayin",    # Phase 9
    "lightarchitects",          # Phase 10 (umbrella)
    "lightarchitects-cli",      # Phase 11
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
authors = ["KFT <kft@lightarchitects.io>"]
license = "Proprietary"
publish = false
repository = "https://github.com/TheLightArchitects/l-arc-sdk"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
# SDK ergonomics exceptions — individual allows override the group at priority 0.
must_use_candidate = "allow"       # SDK builder returns are caller's choice
module_name_repetitions = "allow"  # SoulClient in lightarchitects_soul is intentional
needless_pass_by_value = "allow"   # JSON Value args are conventionally taken by value

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

# ── Centralized Dependencies ──────────────────────────────────────────────────
# All version specs live here. Member crates use `dep.workspace = true`.
# This prevents version drift when multiple crates share dependencies.

[workspace.dependencies]
# ── Crypto (lightarchitects-crypto) ─────────────────────────────────────────────────────
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
subtle = "2"

# ── Secret handling ───────────────────────────────────────────────────────────
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# ── Async runtime (lightarchitects-core + sibling clients) ─────────────────────────────
# Minimal feature set — consumers extend via their own Cargo.toml if needed.
# io-util: BufReader/BufWriter for stdio framing
# process: tokio::process::Command for MCP binary spawning
# sync: Mutex for process handle
# time: sleep/timeout for retry and call timeout
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }

# ── CSPRNG ────────────────────────────────────────────────────────────────────
rand = "0.8"

# ── Serialization ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "2"

# ── Observability ─────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Platform-specific ─────────────────────────────────────────────────────────
security-framework = "3"

# ── Conductor / Arena ──────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
indicatif = "0.17"

# ── SSH transport (SERAPH remote execution) ──────────────────────────────────
russh = "0.57"

# ── Dev/test ──────────────────────────────────────────────────────────────────
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1
