[workspace]
resolver = "2"
members = [
    "lightarchitects-crypto",
    "lightarchitects-core",
    "lightarchitects-auth",      # Auth — API key validation, 3-tier degradation
    "lightarchitects-gateway",   # Phase 6: MCP Gateway binary (Tasks 6.1, 6.4)
    # Added as crates are built in subsequent phases:
    "lightarchitects-soul",      # Phase 4
    "lightarchitects-corso",     # Phase 5
    "lightarchitects-arena",     # keen-forging-hydra: MCP training arena
    "lightarchitects-oracle",    # Multi-model mathematical verification oracle
    "lightarchitects-eva",       # Phase 6
    "lightarchitects-quantum",   # Phase 7
    "lightarchitects-seraph",   # Phase 8
    "lightarchitects-ayin",    # Phase 9
    "lightarchitects",          # Phase 10 (umbrella)
    # Phase 11 (lightarchitects-cli) merged into lightarchitects-gateway
    "lightarchitects-helix",    # Task #49: helix graph backend (soul-helix shim)
    "lightarchitects-turnlog",  # Tier-1 ephemeral transactional log for conversational agents
    "lightarchitects-webshell", # luminous-weaving-nautilus: local web GUI for active coding agent
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
authors = ["KFT <kft@lightarchitects.io>"]
license = "Apache-2.0"
repository = "https://github.com/TheLightArchitects/lightarchitects-sdk"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
# SDK ergonomics exceptions — individual allows override the group at priority 0.
must_use_candidate = "allow"       # SDK builder returns are caller's choice
module_name_repetitions = "allow"  # SoulClient in lightarchitects_soul is intentional
needless_pass_by_value = "allow"   # JSON Value args are conventionally taken by value
# Builders Cookbook mandates — compile-time enforcement (restriction group).
# Tests override these with #[allow(clippy::unwrap_used, clippy::expect_used)].
panic       = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

# ── Centralized Dependencies ──────────────────────────────────────────────────
# All version specs live here. Member crates use `dep.workspace = true`.
# This prevents version drift when multiple crates share dependencies.

[workspace.dependencies]
# ── Crypto (lightarchitects-crypto) ─────────────────────────────────────────────────────
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
subtle = "2"

# ── Secret handling ───────────────────────────────────────────────────────────
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# ── Async runtime (lightarchitects-core + sibling clients) ─────────────────────────────
# Minimal feature set — consumers extend via their own Cargo.toml if needed.
# io-util: BufReader/BufWriter for stdio framing
# process: tokio::process::Command for MCP binary spawning
# sync: Mutex for process handle
# time: sleep/timeout for retry and call timeout
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }

# ── CSPRNG ────────────────────────────────────────────────────────────────────
rand = "0.8"

# ── Serialization ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "2"

# ── Observability ─────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Platform-specific ─────────────────────────────────────────────────────────
security-framework = "3"

# ── Conductor / Arena ──────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
fs2 = { version = "0.4" }
indicatif = "0.17"
rpassword = "7"
keyring = { version = "3", features = ["sync-secret-service", "vendored", "crypto-rust"] }

# ── Arena (HTTP gateway + scheduler + heartbeat agents) ───────────────────────
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = "0.6"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
cron = "0.15"
notify = "6"
dirs-next = "2.0"
dashmap = "6"
futures-util = "0.3"
tokio-tungstenite = "0.26"
libc = "0.2"
anyhow = "1"

# ── SSH transport (SERAPH remote execution) ──────────────────────────────────
openssh = { version = "0.11", features = ["process-mux"] }

# ── Helix graph backend (lightarchitects-helix + absorbed graph-engine) ──────
neo4rs    = { version = "0.8", features = ["json"] }
walkdir   = "2"
moka      = { version = "0.12", features = ["future"] }
regex     = "1"
serde_yaml = "0.9"
fastembed = { version = "5", optional = false }

# ── Dev/test ──────────────────────────────────────────────────────────────────
tempfile = "3"
proptest = "1"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
mockito = "1"

# ── External path deps (portable relative paths from workspace root) ──────────
ayin = { path = "../AYIN/AYIN-DEV/ayin" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1
