[workspace]
resolver = "2"
members = [
    "lightarchitects",                   # Unified SDK — all clients + advanced capabilities
    "lightarchitects-webshell",          # Binary: local web GUI (PTY + 3D helix panel)
    "lightarchitects-arch",              # Architecture intelligence — extract, verify, emit
    "lightarchitects-webshell-mcp-host", # Generic MCP host: spawn + handshake + HTTP surface
    "tools/contract-gate",               # CI gate: schema + symmetric-edge sweep over contracts/
]
exclude = [
    "lightarchitects-gateway",
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
authors = ["Kevin Francis Tan <kevinfrancis.tan@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/theLightArchitect/lightarchitects-sdk"
homepage = "https://github.com/theLightArchitect/lightarchitects-platform"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
# SDK ergonomics exceptions — individual allows override the group at priority 0.
must_use_candidate = "allow"       # SDK builder returns are caller's choice
module_name_repetitions = "allow"  # SoulClient in lightarchitects_soul is intentional
needless_pass_by_value = "allow"   # JSON Value args are conventionally taken by value
# Builders Cookbook mandates — compile-time enforcement (restriction group).
# Tests override these with #[allow(clippy::unwrap_used, clippy::expect_used)].
panic       = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

# ── Centralized Dependencies ──────────────────────────────────────────────────
# All version specs live here. Member crates use `dep.workspace = true`.
# This prevents version drift when multiple crates share dependencies.

[workspace.dependencies]
# ── Crypto (lightarchitects-crypto) ─────────────────────────────────────────────────────
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
subtle = "2"

# ── Secret handling ───────────────────────────────────────────────────────────
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# ── Async runtime (lightarchitects-core + sibling clients) ─────────────────────────────
# Minimal feature set — consumers extend via their own Cargo.toml if needed.
# io-util: BufReader/BufWriter for stdio framing
# process: tokio::process::Command for MCP binary spawning
# sync: Mutex for process handle
# time: sleep/timeout for retry and call timeout
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }

# ── CSPRNG ────────────────────────────────────────────────────────────────────
rand = "0.8"

# ── Serialization ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "2"

# ── Observability ─────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Platform-specific ─────────────────────────────────────────────────────────
security-framework = "3"

# ── Conductor / Arena ──────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
fs2 = { version = "0.4" }
indicatif = "0.17"
rpassword = "7"
keyring = { version = "3", features = ["sync-secret-service", "vendored", "crypto-rust"] }

# ── Arena (HTTP gateway + scheduler + heartbeat agents) ───────────────────────
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = "0.6"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
cron = "0.15"
notify = "6"
dirs-next = "2.0"
dashmap = "6"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.26"
libc = "0.2"
anyhow = "1"

# ── SSH transport (SERAPH remote execution) ──────────────────────────────────
openssh = { version = "0.11", features = ["process-mux"] }

# ── Helix graph backend (lightarchitects-helix + absorbed graph-engine) ──────
neo4rs    = { version = "0.8", features = ["json"] }
walkdir   = "2"
moka      = { version = "0.12", features = ["future"] }
regex     = "1"
serde_yaml = "0.9"
fastembed = { version = "5", optional = false }
similar   = "2"

# ── Architecture intelligence (lightarchitects-arch) ─────────────────────────
streaming-iterator   = "0.1"
tree-sitter          = "0.24.4"
tree-sitter-rust     = "0.23"
tree-sitter-typescript = "0.23.2"
tree-sitter-python   = "0.23.2"
pulldown-cmark       = { version = "0.12", features = [] }

# ── Container spawn policy (lock-free ARC, Windows system info) ──────────────
arc-swap = "1.8.2"
sysinfo = "0.37.0"

# ── Dev/test ──────────────────────────────────────────────────────────────────
tempfile = "3"
proptest = "1"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
mockito = "1"


# ── Patch section (MED M-6 lockfile collision fix) ────────────────────────────
# CORSO's optional deps reference lightarchitects from git.  We redirect to the
# local path so the workspace lockfile has a single canonical source.
[patch."https://github.com/TheLightArchitects/lightarchitects-sdk.git"]
lightarchitects = { path = "lightarchitects" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1

[profile.coverage]
inherits = "test"
debug = true
