[package]
name = "l-arc-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Light Architects SDK."

[[bin]]
name = "l-arc"
path = "src/main.rs"
doc = false

[lints]
workspace = true

[dependencies]
l-arc      = { path = "../l-arc",      features = ["full", "tracing-fmt"] }
l-arc-core = { path = "../l-arc-core" }
clap            = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread", "macros"] }
