[package]
name = "l-arc-eva"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed client for EVA's 8 MCP tools (dual-path adapter: generic action + typed methods)."

[lints]
workspace = true

[dependencies]
l-arc-core = { path = "../l-arc-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
