[package]
name = "l-arc-soul"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed client for the SOUL knowledge-graph MCP server (soulTools, 23 actions)"
publish = false

[dependencies]
l-arc-core = { path = "../l-arc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
