[package]
name = "l-arc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Light Architects SDK — typed clients for all MCP siblings."

[lints]
workspace = true

[features]
## Enable all sibling clients (except `ayin` — opt-in separately).
full = ["soul", "corso", "eva", "quantum", "seraph"]

## SOUL knowledge-graph client.
soul = ["dep:l-arc-soul"]
## CORSO operations platform client.
corso = ["dep:l-arc-corso"]
## EVA consciousness system client.
eva = ["dep:l-arc-eva"]
## QUANTUM investigation toolkit client.
quantum = ["dep:l-arc-quantum"]
## SERAPH pentest orchestration client.
seraph = ["dep:l-arc-seraph"]
## AYIN observability transport wrapper (requires `ayin` feature on `l-arc-ayin`).
ayin = ["dep:l-arc-ayin"]

[dependencies]
## Core wire protocol, transport, error types — always present.
l-arc-core = { path = "../l-arc-core" }

## Sibling clients — pulled in only when the corresponding feature is active.
l-arc-soul    = { path = "../l-arc-soul",    optional = true }
l-arc-corso   = { path = "../l-arc-corso",   optional = true }
l-arc-eva     = { path = "../l-arc-eva",     optional = true }
l-arc-quantum = { path = "../l-arc-quantum", optional = true }
l-arc-seraph  = { path = "../l-arc-seraph",  optional = true }
l-arc-ayin    = { path = "../l-arc-ayin",    optional = true }
