[package]
name = "la-crypto"
version = "0.1.0"
description = "Scripture-forged cryptographic foundation for Light Architects"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["keychain", "env-store"]
## macOS Keychain backend for SecretStore (native security-framework API).
keychain = ["dep:security-framework"]
## Environment variable backend for SecretStore (uses unsafe set_var/remove_var).
env-store = []

[dependencies]
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
ed25519-dalek.workspace = true
subtle.workspace = true
secrecy.workspace = true
zeroize.workspace = true
rand.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "crypto"
harness = false

[lints]
workspace = true
