[package]
name = "lightarchitects-arena"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plug-and-play training data factory for MCP tool-use language models"
publish = false

[[bin]]
name = "lightarchitects-arena"
path = "src/main.rs"

[dependencies]
lightarchitects-core = { path = "../lightarchitects-core" }

clap = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
