[package]
name = "lightarchitects-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Light Architects API key authentication — standalone, zero soul dependency"
keywords = ["authentication", "api-key", "mcp", "sdk", "lightarchitects"]
documentation = "https://docs.rs/lightarchitects-auth"

[dependencies]
# SDK core — AuthProvider trait + SdkError
lightarchitects-core = { path = "../lightarchitects-core" }

# HTTP client for key validation
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Platform directories (~/lightarchitects/soul/config/)
dirs = "6"

# Hashing (SHA-256 for key validation)
sha2.workspace = true

# Hex encoding for SHA-256 output
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2"

# CLI support (optional — only needed by binaries that expose `auth` subcommand)
clap = { workspace = true, optional = true }

# One-shot HTTP server for localhost callback (used by auth login)
axum = { version = "0.8", features = ["macros"], optional = true }

# Browser opener (used by auth login)
open = { version = "5", optional = true }

# CSPRNG for PKCE state parameter generation (already a transitive dep via sha2/ring)
getrandom = { version = "0.2", optional = true }

[features]
default = []
cli = ["clap", "open", "axum", "getrandom"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test.workspace = true
tempfile.workspace = true
mockito.workspace = true
serde_json.workspace = true

[lints]
workspace = true
