[package]
name = "lightarchitects-ayin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Feature-gated AYIN observability wrapper for lightarchitects-sdk transports."

[lints]
workspace = true

[features]
## Enable AYIN trace-span instrumentation on every MCP call.
##
## Without this feature, `ObservableTransport<T>` is a zero-cost newtype that
## delegates directly to the inner transport with no additional allocations or
## I/O. Enable it when you want span traces in `~/.soul/helix/ayin/`.
observe = ["dep:ayin", "dep:tokio"]

## Enable conversation-level JSONL tracing with pivot detection.
##
## Provides `ConversationTracer` and `PivotDetector` for recording tool calls,
## errors, and automatic pivot detection to `~/.soul/helix/ayin/conversations/`.
## Without this feature all types are zero-cost noops.
conversations = ["dep:tokio", "dep:thiserror"]

## Enable HTTP client for querying the AYIN viewer REST API.
##
## Provides `AyinClient` which wraps the viewer's two endpoints:
## - `GET /api/sessions`     → list trace actors + dates
## - `GET /api/spans/:actor/:date` → retrieve spans for a session
##
## Requires the AYIN viewer to be running (LaunchAgent at `localhost:3742`).
http-client = ["dep:reqwest", "dep:tokio"]

[dependencies]
lightarchitects-core = { path = "../lightarchitects-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Optional — only pulled in when `observe` feature is active.
ayin = { path = "/Users/kft/Projects/AYIN/AYIN-DEV/ayin", optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
