[package]
name = "lightarchitects-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Light Architects SDK."

[[bin]]
name = "lightarchitects"
path = "src/main.rs"
doc = false

[lints]
workspace = true

[dependencies]
lightarchitects        = { path = "../lightarchitects",        features = ["full", "tracing-fmt"] }
lightarchitects-core   = { path = "../lightarchitects-core" }
lightarchitects-seraph = { path = "../lightarchitects-seraph" }
clap            = { workspace = true }
serde_json      = { workspace = true }
toml            = { workspace = true }
rpassword       = { workspace = true }
keyring         = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }
