[package]
name = "lightarchitects-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol, stdio transport, retry, and error types for the lightarchitects SDK"
publish = false

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
# Expose MockTransport for use in tests across crates in this workspace.
# Add `lightarchitects-core = { ..., features = ["test-utils"] }` to dev-deps.
test-utils = []

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
