[package]
name = "lightarchitects-gateway"
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
authors = ["KFT <kf.tan@lightarchitects.io>"]
license = "MPL-2.0"
repository = "https://github.com/TheLightArchitects/lightarchitects-sdk"
publish = false
description = "Light Architects unified gateway — MCP server, Arena HTTP API, and autonomous agent runtime."

[workspace]
members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.87"
authors = ["KFT <kf.tan@lightarchitects.io>"]
license = "MPL-2.0"
repository = "https://github.com/TheLightArchitects/lightarchitects-sdk"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rpassword = "7"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = "4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"
async-trait = "0.1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
governor = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
cron = "0.15"
notify = "7"
dashmap = "6"
futures-util = "0.3"
tokio-tungstenite = "0.24"
libc = "0.2"
anyhow = "1"
regex = "1"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
keyring = "3"
security-framework = "3"
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "lightarchitects"
path = "src/main.rs"
doc = false

[features]
default = ["spawner"]

## Subprocess spawn mode (current behaviour). Retained as fallback even when
## inline handlers are enabled so that agents configured as `mode = "spawner"`
## still work.
spawner = []

## In-process sibling handlers — compile handler logic directly into the binary
## instead of spawning a subprocess per call.
## NOTE: inline-ayin and inline-corso deps removed — ayin-core/engine/mcp and
## corso-server/trinity-core not yet published. Re-add when those crates are
## available on crates.io or GitHub.
inline-ayin = []
inline-corso = []
inline-eva = []
inline-soul = []
inline-quantum = []
# inline-seraph intentionally omitted — SERAPH stays spawner-only for process
# isolation (offensive security tools must not crash the gateway).
# LÆX is inline-only by design (no standalone binary); the inline-laex feature
# is the canonical and only enable path.
inline-laex = []

## Convenience: enable all six inline handlers at once.
inline-all = [
    "inline-ayin", "inline-corso", "inline-eva",
    "inline-soul", "inline-quantum", "inline-laex",
]

## SOUL heavy dependencies (Neo4j + fastembed). Without this, the SOUL handler
## uses the filesystem vault backend only — no graph database or embeddings.
helix = ["inline-soul"]

[lints]
workspace = true

[dependencies]
# ── Unified SDK (replaces all individual sibling crate deps) ──────────────────
lightarchitects = { path = "../lightarchitects" }

# ── Shared (both MCP + Arena modes) ──────────────────────────────────────────
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
rpassword = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std", "signal", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
dirs-next = { workspace = true }

# ── Arena mode (HTTP gateway + scheduler + heartbeat agents) ──────────────────
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
governor = { workspace = true }
rusqlite = { workspace = true }
cron = { workspace = true }
notify = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
keyring = { workspace = true }

# ── Platform-specific ─────────────────────────────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
